# qa_guru_graduation_project_rest_api

./: README.md  config.py  index.html  pyproject.toml
.github/workflows/: test.yml
10/: index.html
10/export/: influxDbData.txt
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
11/widgets/: executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
12/: index.html
12/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: categories-trend.json  history.json  retry-trend.json
12/widgets/: duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
13/: index.html
13/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: duration-trend.json  history-trend.json  history.json
13/widgets/: categories-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
14/: index.html
14/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt  prometheusData.txt
14/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
14/widgets/: duration.json  executors.json  severity.json  (+1 more)
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
30/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
clients/: base_client.py  operations_client.py
fixtures/: operations.py  settings.py
schema/: operations.py
tests/: test_operations.py
tools/: fakers.py  logger.py
(+550 files in other folders)
