[project]
name = "qa-guru-graduation-project-rest-api"
version = "0.1.0"
description = "test"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "restcodegen (>=1.1.1,<2.0.0)"
]

[project.optional-dependencies]
dev = ["ruff>=0.13.0,<1.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
