[project]
name = "qa-guru-graduation-project-rest-api"
version = "0.1.0"
description = "test"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"

requires-python = ">=3.10,<4.0"

dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "restcodegen (>=1.1.1,<2.0.0)",
    "poetry-core (>=2.0.0)",
    "jsonschema (>=4.25.1)",
    "faker (>=37.8.0,<38.0.0)"
]

[project.optional-dependencies]
dev = ["ruff>=0.13.0,<1.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s -v"
python_files = ["*_tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "regression: Маркировка для регрессионных тестов.",
    "operations: Маркировка для тестов, связанных с операциями."
]
